--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vishesh",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.4",
     "mongoose": "^5.3.14",
     "underscore": "^1.9.1"
   },
