--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "joi": "^14.3.0",
     "mongoose": "^5.3.14",
     "underscore": "^1.9.1"
   },
