--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "helmet": "^3.15.0",
     "joi": "^14.3.0",
     "mongoose": "^5.3.14",
+    "morgan": "^1.9.1",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
