--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vishesh",
   "license": "MIT",
   "dependencies": {
+    "config": "^3.0.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "joi": "^14.3.0",
