--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^14.3.0",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
+    "pug": "^2.0.3",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
